src/objects/Course__c.object
<CustomObject>
    <description>Used to track courses.</description>
    <fields>
        <fullName>Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Certification associated with a course.</description>
        <label>Certification</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <description>Description of what is covered in the course.</description>
        <label>Course Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Length of a course.</description>
        <inlineHelpText>Number of days it takes to teach the course.</inlineHelpText>
        <label>Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Courses_Delivered__c</fullName>
        <description>Number of courses delivered.</description>
        <label># of Courses Delivered</label>
        <summaryFilterItems>
            <field>Course_Delivery__c.Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </summaryFilterItems>
        <summaryForeignKey>Course_Delivery__c.Course__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of course.</description>
        <inlineHelpText>Active - Course is currently being taught.
Retired - Course is no longer being taught.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Duration__c</columns>
        <columns>Status__c</columns>
        <columns>Certification__c</columns>
        <columns>Number_of_Courses_Delivered__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>